# RawSnakeIO

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/game/: bot_names.h  config.h  math.cc  math.h  sector.cc  sector.h  snake.cc  snake.h  world.cc  world.h
src/packet/: p_all.h  p_base.h  p_food.cc  p_food.h  p_init.cc  p_init.h  p_leaderboard.cc  p_minimap.cc  p_minimap.h  p_pre_init.h  p_snake.cc  p_snake.h
src/server/: config.cc  game.cc  game.h  server.h  streambuf_array.h
